// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 igajno"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-sc-fukmjx-2 hCNLid"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 fzHeJU"
    >
      +
    </div>
    Organisaatio 1
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 gdHHeG"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
</div>
`;

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 igajno"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-sc-fukmjx-2 elHXFc"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 fzHeJU"
    >
      -
    </div>
    Organisaatio 1
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 gdHHeG"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
  <div
    class="Expander__ExpandedContents-sc-fukmjx-4 bNvYKG"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 cyDfPx"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 dtOCFl"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 hXEqNj"
        >
          Tietojen käyttölupa:
        </b>
         Lakiin perustuva tiedonkäyttölupa.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 jdVvmw"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFuteV"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 hXEqNj"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-sc-ufvf4x-0 iQprnV"
    >
      <div
        class="LogEntries__TopRow-sc-ufvf4x-1 fUHhnJ"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-sc-r8zxw8-0 fqmioD"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 igajno"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-sc-fukmjx-2 hCNLid"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 fzHeJU"
    >
      +
    </div>
    Organisaatio 2
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 gdHHeG"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 igajno"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-sc-fukmjx-2 elHXFc"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 fzHeJU"
    >
      -
    </div>
    Organisaatio 2
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 gdHHeG"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
  <div
    class="Expander__ExpandedContents-sc-fukmjx-4 bNvYKG"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 cyDfPx"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 dtOCFl"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 hXEqNj"
        >
          Tietojen käyttölupa:
        </b>
         Lakiin perustuva tiedonkäyttölupa.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 jdVvmw"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFuteV"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 hXEqNj"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-sc-ufvf4x-0 iQprnV"
    >
      <div
        class="LogEntries__TopRow-sc-ufvf4x-1 fUHhnJ"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-sc-r8zxw8-0 fqmioD"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;
